# nim-anywhere

./: .gitignore  postBuild.bash  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yml  hello-world.yml  world-hello.yml
